--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.71.3",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "expo-font": "~11.1.1"
+    "expo-font": "~11.1.1",
+    "expo-updates": "~0.16.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
